config/instances/manuela-tst/line-dashboard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: line-dashboard
spec:
  host: line-dashboard-manuela-tst-all.apps.edge-monkey-hub.gcp.devcluster.openshift.com
