config/instances/manuela-tst/messaging-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: messaging
spec:
  host: messaging-manuela-tst-all.apps.edge-monkey-hub.gcp.devcluster.openshift.com
